Adjust configuration to support XCFramework archive

--- a/Configurations/Bolts-iOS-Dynamic.xcconfig
+++ b/Configurations/Bolts-iOS-Dynamic.xcconfig
@@ -13,7 +13,7 @@
 
 PRODUCT_NAME = Bolts
 PRODUCT_BUNDLE_IDENTIFIER = com.bolts.ios
-IPHONEOS_DEPLOYMENT_TARGET = 8.0
+IPHONEOS_DEPLOYMENT_TARGET = 12.0
 
 MODULEMAP_FILE = $(SRCROOT)/Bolts/Resources/iOS.modulemap
 INFOPLIST_FILE = $(SRCROOT)/Bolts/Resources/Info.plist
@@ -24,3 +24,7 @@ OTHER_LDFLAGS = $(inherited) -framework CoreGraphics -framework UIKit
 
 // Use the 1.0.0 to avoid breaking changes with older version of Bolts.
 DYLIB_COMPATIBILITY_VERSION = 1
+
+// XCFramework support
+BUILD_LIBRARY_FOR_DISTRIBUTION = YES
+SKIP_INSTALL = NO
