--- a/Configurations/Bolts-iOS.xcconfig
+++ b/Configurations/Bolts-iOS.xcconfig
@@ -13,9 +13,13 @@
 
 PRODUCT_NAME = Bolts
 PRODUCT_BUNDLE_IDENTIFIER = com.bolts.ios
-IPHONEOS_DEPLOYMENT_TARGET = 8.0
+IPHONEOS_DEPLOYMENT_TARGET = 12.0
 
 MODULEMAP_FILE = $(SRCROOT)/Bolts/Resources/iOS.modulemap
 INFOPLIST_FILE = $(SRCROOT)/Bolts/Resources/Info.plist
 
 APPLICATION_EXTENSION_API_ONLY = YES
+
+// XCFramework support
+BUILD_LIBRARY_FOR_DISTRIBUTION = YES
+SKIP_INSTALL = NO
