--- a/Configurations/BoltsTests-iOS.xcconfig
+++ b/Configurations/BoltsTests-iOS.xcconfig
@@ -14,8 +14,12 @@ PRODUCT_NAME = BoltsTests-iOS
 PRODUCT_MODULE_NAME = BoltsTests
 PRODUCT_BUNDLE_IDENTIFIER = com.bolts.ios.tests
 
-IPHONEOS_DEPLOYMENT_TARGET = 8.0
+IPHONEOS_DEPLOYMENT_TARGET = 12.0
 
 INFOPLIST_FILE = BoltsTests/BoltsTests-Info.plist
 
 TEST_HOST = $(BUILT_PRODUCTS_DIR)/BoltsTestUI.app/BoltsTestUI
+
+// XCFramework support
+BUILD_LIBRARY_FOR_DISTRIBUTION = YES
+SKIP_INSTALL = NO
